@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-07-16T16:14:21Z",
-  "count_outdated" : 394,
-  "uniques_outdated" : 214,
-  "count" : 423,
+  "timestamp" : "2022-07-17T01:08:52Z",
+  "count_outdated" : 396,
+  "uniques_outdated" : 215,
+  "count" : 424,
   "uniques" : 229,
   "clones" : [
-    {
-      "timestamp": "2022-07-02T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-07-03T00:00:00Z",
       "count": 2,
